  version of |compass|, users require the
  :manual:`read </reference/built-in-roles/#read>` permission to access a database in |compass-short|.

- Updated dates to display in :abbr:`UTC (Universal Time Coordinated)`
  time.

- Added support for `SCRAM-SHA-256
  <https://tools.ietf.org/html/rfc7677>`_ authentication mechanism.

- Various bug fixes and improvements.

|compass| 1.15
--------------

*Released August 23, 2018*

- Added support for :ref:`importing plain text pipelines
  <compass-import-pipeline>` into the
  :ref:`Aggregation Pipeline Builder <compass-agg-builder>`.

- Added support for :ref:`exporting aggregation pipelines
  <compass-export-pipeline>` and :ref:`exporting queries
  <compass-export-query>` in the syntax of the following languages:

  - Java

  - Node

  - C#

  - Python 3

|compass| 1.14
--------------

*Released June 26, 2018*

- Added :ref:`Aggregation Pipeline Builder <compass-agg-builder>`,
  which provides the ability to execute
  :manual:`aggregation pipelines </core/aggregation-pipeline/>` to
  gain additional insight into your data.

- Added |compass| :guilabel:`Isolated Edition` for highly secure
  environments. This edition does not initiate any network requests
  except to the MongoDB server.

|compass| 1.13
--------------

*Released May 3, 2018*

- Added ability to
  :ref:`import and export data <compass-import-export>` in **JSON** and
  **CSV** format.

|compass| 1.12
--------------

*Released March 5, 2018*

- Added |compass| :guilabel:`Readonly Edition` which limits certain
  :ref:`CRUD operations <crud>` within your organization.

  .. include:: /includes/fact-readonly-nonpermitted-actions.rst

- Added support for :doc:`connecting to Compass </connect>` using an
  :abbr:`SRV record (Service record)`. In the connect dialog, if
  Compass detects an SRV record URI on the clipboard it
  auto-completes the dialog based on the SRV record.

- Made various performance and stability inprovements to the documents tab.
