@@ -34,6 +34,9 @@ Considerations
   :guilabel:`SRV record` or :guilabel:`Replica Set Name` when 
   filling in your connection information.
 
+- If you are using Kerberos as your authenticaion mechanism, do not 
+  specify the :guilabel:`Password` in the connection form.
+
 - .. include:: /includes/fact-non-genuine-warning.rst
 
 Connect
