@@ -141,10 +141,9 @@ content: |
                  Select :guilabel:`Kerberos` if the deployment uses
                  :manual:`Kerberos </core/kerberos/>` as
                  its authentication mechanism. If selected, you must
-                 provide the
-                 :manual:`Principal </core/kerberos/#principals>`,
-                 :guilabel:`Password`, and :guilabel:`Service Name` to
-                 authenticate the user.
+                 provide the :manual:`Principal </core/kerberos/#principals>`
+                 and :guilabel:`Service Name` to authenticate the user. 
+                 Leave the :guilabel:`Password` field blank. 
 
                  You can also direct |compass| to
                  :guilabel:`Canonicalize the Host Name` by setting the
